Diable selection in button text

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ body {
   padding: 5px;
   background-color: var(--primary);
   color: #fff;
+  user-select: none;
   display: flex;
   align-items: center;
   justify-content: center;
