--- a/src/App.css
+++ b/src/App.css
@@ -76,4 +76,17 @@
 
 /* Home Page */
 
+section h1 {
+  text-align: center;
+  margin: 2rem 0;
+  font-size: 2rem;
+}
 
+.home-wrapper {
+  width: 60%;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 1rem;
+  font-size: 1.5rem;
+}
